src/main/k8s/deployment-with-downstream-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: k8sshowcase
  name: k8sshowcase
spec:
  replicas: 2
  selector:
    matchLabels:
      app: k8sshowcase
  template:
    metadata:
      labels:
        app: k8sshowcase
    spec:
      containers:
        - image: fritzduchardt/k8s-showcase-application:latest
          imagePullPolicy: Always
          name: k8s-showcase-application
          resources:
            requests:
              cpu: 500m
              memory: 256Mi
          volumeMounts:
            - mountPath: /configmap-from-file
              name: configmap-volume
          readinessProbe:
            httpGet:
              port: 9090
              path: /health
          livenessProbe:
            httpGet:
              port: 9090
              path: /health
      volumes:
        - name: configmap-volume
          configMap:
            name: k8sshowcase-from-file
