src/main/k8s/deployment-with-persistent-volume-from-snapshot.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: "1"
  labels:
    app: k8sshowcase
  name: k8sshowcase
spec:
  replicas: 2
  selector:
    matchLabels:
      app: k8sshowcase
  template:
    metadata:
      labels:
        app: k8sshowcase
    spec:
      containers:
        - image: fritzduchardt/k8s-showcase-application:latest
          imagePullPolicy: Always
          name: k8s-showcase-application
          resources:
            requests:
              cpu: 500m
              memory: 256Mi
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          volumeMounts:
            - mountPath: /persistent-volume
              name: persistent-volume
      volumes:
        - name: persistent-volume
          persistentVolumeClaim:
            claimName: k8sshowcase-snapshot
      affinity:
        podAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            - topologyKey: kubernetes.io/hostname
              labelSelector:
               matchExpressions:
                - key: app
                  operator: In
                  values:
                    - k8sshowcase
