src/main/k8s/deployment-with-persistent-volume.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: "1"
  labels:
    app: k8sshowcase
  name: k8sshowcase
  namespace: default
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: k8sshowcase
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: k8sshowcase
    spec:
      volumes:
        - name: persistent-volume
          persistentVolumeClaim:
            claimName: k8sshowcase-snapshot
      containers:
        - image: fritzduchardt/k8s-showcase-application:latest
          imagePullPolicy: Always
          name: k8s-showcase-application
          resources:
            requests:
              cpu: 1
              memory: 4Gi
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          volumeMounts:
            - mountPath: /persistent-volume
              name: persistent-volume
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
