src/main/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: k8sshowcase
  name: k8sshowcase
spec:
  ports:
    - port: 8080
      name: application
      protocol: TCP
      targetPort: 8080
    - port: 9090
      name: health
      protocol: TCP
      targetPort: 9090
  selector:
    app: k8sshowcase
