src/main/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$1
  name: k8sshowcase
spec:
  rules:
    - http:
        paths:
          - path: /k8sshowcase/(.*)
            backend:
              serviceName: k8sshowcase
              servicePort: 8080
